# meteo

./: .gitignore  README.md  main.py  pyproject.toml  script.py  weather.db
app/: deps.py  main.py  schemas.py
app/api/: api.py
app/db/: config.py  models.py
app/repo/: auth_repo.py  meteo_repo.py
app/routers/: __init__.py  auth.py  meteo.py
app/scheduler/: meteo_info.py  scheduler.py
app/service/: auth_service.py  jwt_service.py  meteo_service.py
app/utils/: deps.py  logger.py  settings.py  upgrade_time.py
app/utils/schemas/: request.py  response.py  schemas.py
migrations/: env.py
migrations/versions/: 09739a82733d_init_schemas.py  1fe97f5ceaae_add_index.py  acf3d4a952d2_delete_unique_key.py
tests/: conftest.py  database.py  test_city.py  test_register.py
tests/integrations/test_auth/: test_register.py  test_register_duplicate.py
tests/integrations/test_city/: test_add_cities.py  test_city.py  test_get_cities.py
tests/unit/test_meteo_service/: test_city_not_found.py  test_forecast_not_found.py  test_get_forecast_success.py
