[project]
name = "meteo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
